--- a/customers/templates/auth/login.html
+++ b/customers/templates/auth/login.html
@@ -12,12 +12,16 @@
                        {{ error_message }}
                     </div>
                 {% endif %}
-
+                {% if invalid_account %}
+                  <div class = "alert alert-danger">
+                    {{ invalid_account }}
+                  </div>
+                {% endif %}
                 {% for fields in form %}
                   <div class="form-group row" style = "margin-bottom:10px">
                     <label for="Email" class="col-sm-3 col-form-label">{{ fields.label}} </label>
                     <div class="col-sm-8">
-                      <input type="text" name = "{{ fields.name }}" class="form-control" id="username" >
+                      <input type = "{{ fields.field.widget.input_type }}" name = "{{ fields.name }}" class="form-control" id="username" >
                     </div>
                   </div>
                 {% endfor %}
@@ -28,7 +32,7 @@
                   <div class="col-sm-8">
                     <input type="submit" class="btn bg-success form-control" value = "Login">
                     <a class = "forgot-password" href="">Forgot Password?</a>
-                    <a class = "create-account" href="/signup/">Sign Up</a>
+                    <a class = "create-account" href="{% url 'customers:signup_view' %}">Sign Up</a>
                   </div>
                 </div>
             </form>
