--- a/customers/templates/base_layout/layout.html
+++ b/customers/templates/base_layout/layout.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
-    <title>{{name}}</title>
+    <title>{{ title }}</title>
     <link rel="shortcut icon" type="image" href="{% static 'title_logo/title_logo.png' %}">
     <script src="{% static 'js/layout.js' %}"></script>
 </head>
@@ -29,11 +29,20 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link nav-menu_font_size" id = "home" href="/home/">Home</a>
-              <a class="nav-link nav-menu_font_size" href="#">BLOGS</a>
-              <a class="nav-link nav-menu_font_size" href="#">SERVICES</a>
-              <a class="nav-link nav-menu_font_size" href="/appointments/" tabindex="-1">APPOINTMENTS</a>
-              <a class="nav-link nav-menu_font_size" href="/login/">ACCOUNTS</a>
+              <a class="nav-link nav-menu_font_size" id = "home" href="{% url 'customers:home_view' %}">Home</a>
+              <a class="nav-link nav-menu_font_size" href="#">Blogs</a>
+              <a class="nav-link nav-menu_font_size" href="#">Services</a>
+              <a class="nav-link nav-menu_font_size" href="/appointments/" tabindex="-1">Appointments</a>
+              <a class="nav-link nav-menu_font_size" style = "margin-right:20px" href="{% url 'customers:dashboard_view' %}">Accounts</a>
+              {% if user.is_authenticated %}
+              <span class="nav-link nav-menu_font_size">{{ user }}</span>
+                <a class="nav-menu_font_size"  href="">
+                  <form action = "{% url 'customers:logout_view' %}" method="POST">
+                    {% csrf_token %}
+                     <input class = "nav-link bg-transparent border-0 text-decoration-none" type="submit" value = "Logout">
+                  </form>
+                </a>
+              {% endif %}
             </div>
           </div>
         </div>
