--- a/staff/templates/staff/staff_base_layout/layout.html
+++ b/staff/templates/staff/staff_base_layout/layout.html
@@ -78,17 +78,16 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
+                    <img class = "img-fluid" style = "width: 30px; height: 30px; border-radius: 50%;" src="{% static 'Images/staff_logo.png' %}" alt="">
+                    <span>Staffs</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
+                        <a class="collapse-item" href="">Staff List</a>
+                        <a class="collapse-item" href="{% url 'staff:add_staff_view' %}">Add Staff</a>
+                        <a class="collapse-item" href="">Animations</a>
+                        <a class="collapse-item" href="">Other</a>
                     </div>
                 </div>
             </li>
