Done coding for add staff account.

--- a/customers/templates/base_layout/layout.html
+++ b/customers/templates/base_layout/layout.html
@@ -34,7 +34,7 @@
               <a class="nav-link nav-menu_font_size" href="#">Services</a>
               <a class="nav-link nav-menu_font_size" href="/appointments/" tabindex="-1">Appointments</a>
               <a class="nav-link nav-menu_font_size" style = "margin-right:20px" href="{% url 'customers:dashboard_view' %}">Accounts</a>
-              {% if user.is_authenticated %}
+              {% if user.is_authenticated and user.user_type == 3 %}
               <span class="nav-link nav-menu_font_size">{{ user }}</span>
                 <a class="nav-menu_font_size"  href="">
                   <form action = "{% url 'customers:logout_view' %}" method="POST">
