--- a/staff/templates/staff/pages/add_pets.html
+++ b/staff/templates/staff/pages/add_pets.html
@@ -1,7 +1,50 @@
 {% extends 'staff/staff_base_layout/layout.html' %}
-
 {% block content %}
-    {% for customers in customers %}
-        {{customers.address_barangay}}
-    {% endfor %}
+    <div class="container">
+        <h2 class = "page-header">Add Pet</h2>
+        <div class="card-body">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == "success" %}
+                        <div class="alert alert-success">
+                            {{message}}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for fields in form %}
+                    <div class="form-group"> 
+                        {% if fields.errors %}
+                            <div class="alert alert-danger">
+                                {{fields.errors}}
+                            </div>
+                        {% endif %}
+                        <label>{{fields.label}}</label>
+                        {% if fields.field.widget.input_type != "select"  and fields.name != "added_by" and fields.name != "pet_image" %}
+                            <input type="{{fields.field.widget.input_type}}" id = "{{fields.name}}" name = "{{fields.name}}" class="form-control" required>
+                        {% endif %}
+                        {% if fields.name == "pet_image" %}
+                            <input type="{{fields.field.widget.input_type}}" id = "{{fields.name}}" name = "{{fields.name}}" style = "height: 45px;" class="form-control" required>
+                        {% endif %}
+                        {% if fields.field.widget.input_type == "select" %}
+                            <select name="{{fields.name}}" id="{{fields.name}}">
+                                {% for id,value in fields.field.choices %}
+                                    <option id = "{{value}}" value="{{id}}">{{value}}</option>
+                                {% endfor %}
+                            </select>
+                        {% endif %}
+                        {% if fields.name == "added_by" %}
+                            <input type="{{fields.field.widget.input_type}}" value = "{{request.user.first_name}} {{request.user.last_name}}" id = "{{fields.name}}" name = "{{fields.name}}" required class="form-control">
+                        {% endif %}
+                    </div>
+                {% endfor %}
+                <button class = "btn btn-primary btn-block" type = "submit">Add Pet</button>
+            </form>
+          </div>
+    </div>
+    <script>
+  
+    </script>
 {% endblock %}
