--- a/staff/templates/staff/pages/staff_list.html
+++ b/staff/templates/staff/pages/staff_list.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <h2 class = "page-header" style = "padding: 20px;">Pets List</h2>
+      <h2 class = "page-header" style = "padding: 20px;">staff List</h2>
     </div>
     <div class="col-md-3" style="padding: 10px;">
       <div class="sort-element">
@@ -23,51 +23,48 @@
     </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" style="height: 700px;">
         <div class="row">
-          {% if pets_list %}
-            {% for pet in pets_list %}
-                            <div class="col-lg-4">
-                                <div class="text-center card-box">
-                                    <div class="member-card pt-2 pb-2">
-                                        <div class="thumb-lg member-thumb mx-auto"><img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="rounded-circle img-thumbnail" alt="profile-image"></div>
-                                        <div class="">
-                                            <h4>Freddie J. Plourde</h4>
-                                            <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
-                                        </div>
-                                        <ul class="social-links list-inline">
-                                            <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                            <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                            <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Skype"><i class="fa fa-skype"></i></a></li>
-                                        </ul>
-                                        <button type="button" class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light">Message Now</button>
-                                        <div class="mt-4">
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    <div class="mt-3">
-                                                        <h4>2563</h4>
-                                                        <p class="mb-0 text-muted">Wallets Balance</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4">
-                                                    <div class="mt-3">
-                                                        <h4>6952</h4>
-                                                        <p class="mb-0 text-muted">Income amounts</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4">
-                                                    <div class="mt-3">
-                                                        <h4>1125</h4>
-                                                        <p class="mb-0 text-muted">Total Transactions</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-            {% endfor %}
-
+          {% if staff_list %}
+            <table class="table manage-candidates-top mb-0 table-striped">
+              <thead>
+                <tr>
+                  <th>Staff Name</th>
+                  <th class="text-center">Contact Number</th>
+                  <th class="action text-right">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for staff in staff_list %}
+                  <tr class="candidates-list">
+                    <td class="title">
+                      <div class="thumb">
+                        <a href="/media/{{staff.profile_pic}}"><img class="img-fluid" style="height: 70px; width: 70px; border-radius: 50%;" src="/media/{{staff.profile_pic}}" alt=""></a>
+                      </div>
+                      <div class="candidate-list-details">
+                        <div class="candidate-list-info">
+                          <div class="candidate-list-title">
+                            <h5 class="mb-0"><a href="#">{{staff.auth_user_id.first_name}} {{staff.auth_user_id.last_name}}</a></h5>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="candidate-list-favourite-time text-center">
+                      <div style="margin-top:30px">
+                        <span class="candidate-list-time order-1" >{{staff.contact_number}}</span>
+                      </div>
+                    </td>
+                    <td>
+                      <ul class="list-unstyled mb-0 d-flex justify-content-end" style="margin-top:30px">
+                        <li><a href="#" class="text-primary" style="margin-right:10px" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
+                        <li><a href="{% url 'staff:staff_update_view' staff.auth_user_id.id %}" class="text-info"  data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-pencil-alt"></i></a></li>
+                      </ul>
+                    </td>
+                  </tr>
+                          
+                {% endfor %}
+              </tbody>
+            </table>
           {% else %}
           <div class="col-md-12" style="height: 500px;">
               <h1 class = "text-center">No Result</h1>
