--- a/staff/templates/staff/pages/pets_list.html
+++ b/staff/templates/staff/pages/pets_list.html
@@ -45,7 +45,7 @@
                       <a href="/media/{{pet.owner_id.profile_pic}}" ><img class = "img img-fluid" style="height: 60px; width: 60px; border-radius: 50%;" alt="image" src="/media/{{pet.owner_id.profile_pic}}"></a>
                       <div class="article-user-details">
                         <div class="user-detail-name">
-                          <a href="#">{{pet.owner}}</a>
+                          <a href="{% url 'staff:customers_profile_view' %}?id={{pet.owner_id.id}}">{{pet.owner}}</a>
                         </div>
                         <div style = "float: left;" class="text-job">Owner</div>
                         <div class="article-cta" style = "float: right; margin-right: 30px;">
