--- a/staff/templates/staff/pages/staff_profiles.html
+++ b/staff/templates/staff/pages/staff_profiles.html
@@ -1,39 +1,30 @@
+{% extends 'staff/staff_base_layout/layout.html' %}
+{% block content %}
+<div class="row">
 <div class="col-lg-4">
     <div class="text-center card-box">
         <div class="member-card pt-2 pb-2">
-            <div class="thumb-lg member-thumb mx-auto"><img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+            <a href="/media/{{staff.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{staff.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
             <div class="">
-                <h4>Freddie J. Plourde</h4>
-                <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
-            </div>
-            <ul class="social-links list-inline">
-                <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Skype"><i class="fa fa-skype"></i></a></li>
-            </ul>
-            <button type="button" class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light">Message Now</button>
-            <div class="mt-4">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="mt-3">
-                            <h4>2563</h4>
-                            <p class="mb-0 text-muted">Wallets Balance</p>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="mt-3">
-                            <h4>6952</h4>
-                            <p class="mb-0 text-muted">Income amounts</p>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="mt-3">
-                            <h4>1125</h4>
-                            <p class="mb-0 text-muted">Total Transactions</p>
-                        </div>
-                    </div>
-                </div>
+                
+                <h4>{{staff.username}}</h4>
+
+                <p class="text-muted">{{staff.email}}</p>
             </div>
         </div>
     </div>
 </div>
+<div class="col-md-8" style = "height: 600px;">
+    <div class = "container-fluid" style = "position:absolute">
+        <table class = "table table-striped">
+            <tr style="background-color:#D4E6F1;"><th colspan="2"><h2> Staff Details</h2></th></tr>
+            <tr style = "font-size:25px;"><td>First Name :</td><td>{{staff.first_name}}</td></tr>
+            <tr style = "font-size:25px;"><td>Last Name :</td><td>{{staff.last_name}}</td></tr>
+            <tr style = "font-size:25px;"><td>Contact Number :</td><td>{{staff.contact_number}}</td></tr>
+            <tr style = "font-size:25px;"><td>Adress Barangay :</td><td>{{staff.address_barangay}}</td></tr>
+            <tr style = "font-size:25px;"><td>Adress Municipality :</td><td>{{staff.address_municipality}}</td></tr>
+        </table>
+    </div>
+</div>
+</div>
+{% endblock %}
