--- a/staff/templates/staff/pages/staff_update.html
+++ b/staff/templates/staff/pages/staff_update.html
@@ -7,7 +7,7 @@
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token%}
                 <div class="form-group row" style = "margin-bottom:10px">
-                    <img style = "height: 200px;width: 200px; border-radius: 10px;" class = "img img-fluid" src="{{staff.profile_pic}}"/>    
+                    <img style = "height: 200px;width: 200px; border-radius: 10px;" class = "img img-fluid" src="/media/{{staff.profile_pic}}"/>    
                 </div>
                 {% for fields in form %}
                         <div class="form-group row" style = "margin-bottom:10px">
