--- a/staff/templates/staff/pages/staff_profiles.html
+++ b/staff/templates/staff/pages/staff_profiles.html
@@ -23,6 +23,7 @@
             <tr style = "font-size:25px;"><td>Contact Number :</td><td>{{staff.contact_number}}</td></tr>
             <tr style = "font-size:25px;"><td>Adress Barangay :</td><td>{{staff.address_barangay}}</td></tr>
             <tr style = "font-size:25px;"><td>Adress Municipality :</td><td>{{staff.address_municipality}}</td></tr>
+            <tr style = "font-size:25px;"><td>Added By :</td><td>{{staff.added_by}}</td></tr>
         </table>
     </div>
 </div>
