Creating add pet template in doctors dashboard.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -66,7 +66,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{% url 'doctors:pets_list_view' %}">Pets List</a>
-                        <a class="collapse-item" href="{% url 'staff:add_pet_view' %}">Add Pets</a>
+                        <a class="collapse-item" href="{% url 'doctors:add_pet_view' %}">Add Pets</a>
                         <a class="collapse-item" href="cards.html">Cards</a>
                         
                     </div>
