Creating customers list in doctors dashboard.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -81,7 +81,7 @@
                 <div id="collapseUtilities1" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{% url 'staff:customers_list_view' %}">Customers List</a>
+                        <a class="collapse-item" href="{% url 'doctors:customers_list_view' %}">Customers List</a>
                         <a class="collapse-item" href="{% url 'staff:add_staff_view' %}">Add Customer</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
