--- a/staff/templates/staff/pages/pets_list.html
+++ b/staff/templates/staff/pages/pets_list.html
@@ -105,9 +105,7 @@
                 {% else %}
                   <li class="page-item disabled" ><a class="page-link" href="">Previous</a></li>
                 {% endif %}
-                {% for i in paginator.page_range %}
-                  <li class="page-item"><a class="page-link" href="{% url 'staff:pets_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{i}}">{{i}}</a></li>
-                {% endfor %}
+                  <li class="page-item disabled"><a class="page-link" href="">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</a></li>
                 {% if page_obj.has_next %}
                   <li class="page-item"><a class="page-link" href="{% url 'staff:pets_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{page_obj.next_page_number}}">Next</a></li>
                 {% else %}
