Creating add customer template in doctors dashboard.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -82,7 +82,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{% url 'doctors:customers_list_view' %}">Customers List</a>
-                        <a class="collapse-item" href="{% url 'staff:add_staff_view' %}">Add Customer</a>
+                        <a class="collapse-item" href="{% url 'doctors:add_customer_view' %}">Add Customer</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
                     </div>
