--- a/doctors/templates/doctors/pages/customers_list.html
+++ b/doctors/templates/doctors/pages/customers_list.html
@@ -54,7 +54,7 @@
                       <div class="candidate-list-details">
                         <div class="candidate-list-info">
                           <div class="candidate-list-title">
-                            <h5 class="mb-0"><a href="{% url 'staff:customers_profile_view' %}?id={{customer.id}}">{{customer.auth_user_id.first_name}} {{customer.auth_user_id.last_name}}</a></h5>
+                            <h5 class="mb-0"><a href="{% url 'doctors:customer_profile_view' %}?id={{customer.id}}">{{customer.auth_user_id.first_name}} {{customer.auth_user_id.last_name}}</a></h5>
                           </div>
                         </div>
                       </div>
@@ -66,7 +66,7 @@
                     </td>
                     <td>
                       <ul class="list-unstyled mb-0 d-flex justify-content-end" style="margin-top:30px">
-                        <li><a href="{% url 'staff:customers_profile_view' %}?id={{customer.id}}" class="text-primary" style="margin-right:10px" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
+                        <li><a href="{% url 'doctors:customer_profile_view' %}?id={{customer.id}}" class="text-primary" style="margin-right:10px" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
                         <li><a href="{% url 'staff:add_pet_specific_customer_view' customer.id  %}" class="text-info"  data-toggle="tooltip" title="" data-original-title="Edit"><i class="fas fa-plus"></i></a></li>
                     </ul>
                     </td>
