--- a/staff/templates/staff/pages/staff_profiles.html
+++ b/staff/templates/staff/pages/staff_profiles.html
@@ -24,6 +24,7 @@
             <tr style = "font-size:25px;"><td>Adress Barangay :</td><td>{{staff.address_barangay}}</td></tr>
             <tr style = "font-size:25px;"><td>Adress Municipality :</td><td>{{staff.address_municipality}}</td></tr>
             <tr style = "font-size:25px;"><td>Added By :</td><td>{{staff.added_by}}</td></tr>
+            <tr style = "font-size:25px;"><td>Created At :</td><td>{{staff.created_at}}</td></tr>
         </table>
     </div>
 </div>
