--- a/doctors/templates/doctors/pages/pets_list.html
+++ b/doctors/templates/doctors/pages/pets_list.html
@@ -52,11 +52,11 @@
                     </div>
                     <p>Breed : {{pet.breed}}</p>
                     <p>Added by : {{pet.added_by}}</p>
-                    <div class="article-user">
+                    <div class="article-user"> 
                       <a href="/media/{{pet.owner_id.profile_pic}}" ><img class = "img img-fluid" style="height: 60px; width: 60px; border-radius: 50%;" alt="image" src="/media/{{pet.owner_id.profile_pic}}"></a>
                       <div class="article-user-details">
                         <div class="user-detail-name">
-                          <a href="">{{pet.owner_id}}</a>
+                          <a href="{% url 'doctors:customer_profile_view' %}?id={{pet.owner_id.id}}">{{pet.owner_id}}</a>
                          
                         </div>
                         <div style = "float: left;" class="text-job">Owner</div>
