--- a/staff/templates/staff/pages/pet_update.html
+++ b/staff/templates/staff/pages/pet_update.html
@@ -32,7 +32,7 @@
                         {% endif %}
                     </div>
                 {% endfor %}
-                <button class = "btn btn-primary btn-block" type = "submit">Add Pet</button>
+                <button class = "btn btn-primary btn-block" type = "submit">Update Pet</button>
             </form>
           </div>
     </div>
