--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -99,7 +99,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{% url 'doctors:staff_list_view' %}">Staff List</a>
-                        <a class="collapse-item" href="{% url 'staff:add_staff_view' %}">Add Staff</a>
+                        <a class="collapse-item" href="{% url 'doctors:add_staff_view' %}">Add Staff</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
                     </div>
