--- a/doctors/templates/doctors/pages/staff_list.html
+++ b/doctors/templates/doctors/pages/staff_list.html
@@ -54,7 +54,7 @@
                       <div class="candidate-list-details">
                         <div class="candidate-list-info">
                           <div class="candidate-list-title">
-                            <h5 class="mb-0"><a href="">{{staff.auth_user_id.first_name}} {{staff.auth_user_id.last_name}}</a></h5>
+                            <h5 class="mb-0"><a href="{% url 'doctors:staff_profile_view' %}?id={{staff.auth_user_id.id}}">{{staff.auth_user_id.first_name}} {{staff.auth_user_id.last_name}}</a></h5>
                           </div>
                         </div>
                       </div>
@@ -66,8 +66,8 @@
                     </td>
                     <td>
                       <ul class="list-unstyled mb-0 d-flex justify-content-end" style="margin-top:30px">
-                        <li><a href="" class="text-primary" style="margin-right:10px" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
-                        <li><a href="" class="text-info"  data-toggle="tooltip" title="" data-original-title="Add"><i class="fas fa-plus"></i></a></li>
+                        <li><a href="{% url 'doctors:staff_profile_view' %}?id={{staff.auth_user_id.id}}" class="text-primary" style="margin-right:10px" data-toggle="tooltip" title="" data-original-title="view"><i class="far fa-eye"></i></a></li>
+                        <!-- <li><a href="" class="text-info"  data-toggle="tooltip" title="" data-original-title="Add"><i class="fas fa-plus"></i></a></li> -->
                     </ul>
                     </td>
                   </tr>
